--- a/src/main/resources/templates/views/auth/login.html
+++ b/src/main/resources/templates/views/auth/login.html
@@ -156,7 +156,7 @@
                                 placeholder="Contraseña" />
                         </label>
                         <br>
-                        <a href="#" class="link">¿Olvidaste tu contraseña?</a>
+                        <a  th:href="@{/views/email}" class="link">¿Olvidaste tu contraseña?</a>
                         <br>
                         <br>
                         <div>
