--- a/src/main/resources/templates/fragments/headBlog.html
+++ b/src/main/resources/templates/fragments/headBlog.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/blog.css}">
+    <link rel="stylesheet" th:href="@{/css/styleButton.css}">
     <link rel="stylesheet" th:href="@{/icons/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
     <script th:src="@{/tinymce/js/tinymce/tinymce.min.js}"></script>
