--- a/src/main/resources/templates/views/blog/blogList.html
+++ b/src/main/resources/templates/views/blog/blogList.html
@@ -27,7 +27,7 @@
                         <h5 class="card-title">BLOGS</h5>
                     </div>
                     <div class="col-6 text-end">
-                        <a th:href="@{/blog/create}" class="btn btn-primary"><i class="bi bi-plus-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline">Registrar</span></a>
+                        <a th:href="@{/blog/create}" class="btn btnAdd"><strong><i class="bi bi-plus-lg"></i></strong></a>
                     </div>
                     <hr class="mt-2"/>
                 </div>
@@ -54,8 +54,8 @@
                                     <td><span class=" d-none d-sm-none d-md-none d-lg-inline d-xl-inline">[[${#dates.format(item.createdAt, 'dd-MM-yyyy HH:MM')}]]</span> </td>
                                     <td> [[${item.isPrincipal == true ? "Si" : "No"}]]</td>
                                     <td> [[${item.user.name}]]</td>
-                                    <td class="text-end"> <a th:href="@{/blog/find_update/{id}/true (id=${item.id})}" class="btn btn-primary"><i class="bi bi-pencil-square"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline">Actualizar</span></a>
-                                        <a th:href="@{/blog/managment/details/{id}/false (id=${item.id})}" class="btn btn-primary"><i class="bi bi-eye"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline">Detalles</span></a> </td>
+                                    <td class="text-end"> <a th:href="@{/blog/find_update/{id}/true (id=${item.id})}" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
+                                        <a th:href="@{/blog/managment/details/{id}/false (id=${item.id})}" class="btn btn-info"><i class="bi bi-eye"></i></a></td>
                                     
                                 </tr>
                             </tbody>
