--- a/src/main/resources/static/css/styleButton.css
+++ b/src/main/resources/static/css/styleButton.css
@@ -1,10 +1,14 @@
 
 .btnAdd {
-    background-color:  #0abbb5;;
+    background-color:  #0abbb5;
     float: right;
     display: block;
     width: 45px;
     height: 45px;
     border-radius: 50%;
+}
+.btnBack{
+    background-color:  #0abbb5;
+    color: black;
 }
 
