--- a/src/main/resources/static/css/lista.css
+++ b/src/main/resources/static/css/lista.css
@@ -119,7 +119,7 @@ main {
   flex-direction: column;
   overflow: hidden;
   border-radius: 10px 10px 0px 0;
-  box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
+  box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.3);
 }
 .card .banner {
   background-position: center;
@@ -214,10 +214,25 @@ main {
 img{
     max-width: 100%
 }
+.card .banner {
+  background-color: #fff;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  align-items: center;
+}
+
+.feed {
+  background-color: white;
+
+  width: 100%;
+}
+.feeds {
+  float: right;
+}
 
 .heart {
-  margin-top: 50%;
-  background-image: url(web_heart_animation.png);
+  background-image: url(../images/web_heart_animation.png);
   background-position: left;
   background-repeat: no-repeat;
   background-size: 1450px;
@@ -233,39 +248,27 @@ img{
 
 @-webkit-keyframes heartTransition
 {
-    0% {background-position: left;}
-    100% {background-position: right;}
+  0% {background-position: left;}
+  100% {background-position: right;}
 }
 
 @keyframes heartTransition
 {
-    0% {background-position: left;}
-    100% {background-position: right;}
+  0% {background-position: left;}
+  100% {background-position: right;}
 }
 
 .heart_animate
 {
-    -webkit-animation-duration: .8s;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-name: heartTransition;
-    -webkit-animation-timing-function: steps(28);
-    animation-duration: .8s;
-    animation-iteration-count: 1;
-    animation-iteration-count: infinite;
-    animation-name: heartTransition;
-    animation-timing-function: steps(28);
-    background-position: right;
-}
-
-.card .banner {
-  background-color: #fff;
-  width: 3rem;
-  height: 3rem;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
-  border-radius: 50%;
-  align-items: center;
-}
-.card .banner:hover {
-  transform: translateY(25%) scale(1.1);
+  -webkit-animation-duration: .8s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-name: heartTransition;
+  -webkit-animation-timing-function: steps(28);
+  animation-duration: .8s;
+  animation-iteration-count: 1;
+  animation-iteration-count: infinite;
+  animation-name: heartTransition;
+  animation-timing-function: steps(28);
+  background-position: right;
 }
