--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -20,6 +20,8 @@
     <link th:if="${login != null && login == true}" rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
     <link th:if="${login != null && login == true}" rel="stylesheet" th:href="@{/css/login-dog.css}">
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/animation.js}"></script>
 
     <title>AdoptaMe</title>
 </head>
