--- a/src/main/resources/templates/fragments/infoPet.html
+++ b/src/main/resources/templates/fragments/infoPet.html
@@ -4,7 +4,7 @@
 
 <body>
 <div th:fragment="infoPet" th:if="${pet!= null}">
-  <h4>Información general de la mascota</h4>
+  <h4>Información general</h4>
   <div th:object="${pet}" class="row mt-3 px-5">
     <div class="col-12 col-sm-6 col-md-4 mb-2">
       <p class="fw-bold">Nombre</p>
