--- a/src/main/resources/templates/views/adoption/detailAdoption.html
+++ b/src/main/resources/templates/views/adoption/detailAdoption.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container mt-3">
-    <h2>¿Listo para tener un nuevo amigo?</h2>
+    <h2>Adopta un amigo fiel</h2>
     <div th:insert="~{fragments/alert :: alerts}">
     </div>
 
@@ -17,7 +17,7 @@
         <div class="col-12 col-md-4 d-flex mb-2 justify-content-center align-items-center">
             <img class="img-fluid border-2 border-dark" th:src="@{/uploads/{image}(image=${pet.image})}" th:alt="${pet.name}" />
         </div>
-        <div class="col-12 col-md-8 border border-3 border-dark rounded p-2">
+        <div class="col-12 col-md-8 p-2">
             <div th:insert="~{fragments/infoPet :: infoPet}">
 
             </div>
