--- a/src/main/resources/templates/views/adoption/listAdoptions.html
+++ b/src/main/resources/templates/views/adoption/listAdoptions.html
@@ -71,7 +71,7 @@
                             </p>
                         </td>
                         <td>
-                            <a class="btn btn-primary" th:href="@{/adoptions/report/{id}(id=${item.id})}">Ver detalle</a>
+                            <a class="btn btn-info" th:href="@{/adoptions/report/{id}(id=${item.id})}"><i class="bi bi-eye"></i></a>
                         </td>
                     </tr>
                 </tbody>
