--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -41,6 +41,11 @@
                             <a class="nav-link text-white" th:href="@{/blog/general}"><b>Noticias General</b></a>
                         </li>
                     </div>
+                    <div>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" th:href="@{/donation/red}"><b>Donaciones</b></a>
+                        </li>
+                    </div>
                 </ul>
                 <div class="d-flex">
                     <div sec:authorize="!isAuthenticated()">
