--- a/src/main/resources/templates/views/blog/blogDetailsAdmin.html
+++ b/src/main/resources/templates/views/blog/blogDetailsAdmin.html
@@ -1,41 +1,74 @@
 <!DOCTYPE html>
 <html lang="es">
-    <header th:insert="~{fragments/headBlog :: head}"></header>
+<head th:insert="~{fragments/headBlog :: head}">
+    <link rel="stylesheet" th:href="@{/css/blog.css}">
+</head>
+
 <body>
-    <div th:insert="~{fragments/infoToast :: infoToast}"></div>
-    <div th:replace="~{fragments/navigation :: navigation}"></div>
-    
-    <div class="container" th:each="item : ${blog}">
-        <div class="row">
-            <div class="col-12 mt-2">
-                <h2 class="text-center" th:text="${item.title}"></h2>
-            </div>
-            <div class="col-12 mt-2">
-                <h2 class="text-center" th:text="'Autor: ' + ${item.user.name} + ' ' + ${item.user.firstLastname} + ' ' +${item.user.secondLastname}"></h2>
-            </div>
-            <div class="col-12 mt-2">
-                <h2 class="text-center" >Fecha de Publicación: [[${#dates.format(item.createdAt, 'dd-MM-yyyy')}]]</h2>
+<div th:insert="~{fragments/infoToast :: infoToast}">
+</div>
+<div th:replace="~{fragments/navigation :: navigation}">
+
+</div>
+
+<!-- header -->
+<div th:each="item : ${blog}" class="mb-5">
+    <header id="info2">
+        <div class="banner">
+            <div class="container">
+                <h1 class="banner-title">
+                    <b>[[${item.title}]]</b>
+                </h1>
             </div>
         </div>
-        <div class="row mt-5">
-                    <div class="col-4 ">
-                        <img class="img-info" id="img-info"  th:src="@{/uploads/{image} (image=${item.image})}"  height="300px"
-                             width="400px">
-                    </div>
-                    
-                    <div class="col-8">
-                        <p th:utext="${item.content}"></p>
-                    </div>
-             </div>
+    </header>
+    <!-- end of header -->
 
-        <div class="row mt-5 text-center">
-            <div class="col-12">
-                <a th:href="@{/blog/find_update/{id}/true (id=${item.id})}" class="btn btn-primary"><i class="bi bi-pencil-square"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline">Actualizar</span></a>
+    <!-- design -->
+    <section class="design" id="design">
 
+        <div class="container">
+
+            <!-- item -->
+            <div class="row">
+
+                <img class="img-info img-height img-height2" id="img-info"  th:src="@{/uploads/{image} (image=${item.image})}"  height="200px"
+                     th:if="${item.image != null}">
+
+                <div class="col-1 hide-col">
+
+                </div>
+                <div class="col-10">
+                    <p th:utext="${item.content}"></p>
+                    <hr style="margin-top: 6%">
+                    <div class="row" >
+                        <div class="col-12 col-sm-10">
+                            <b>Escrito por: [[${item.user.name}]] [[${item.user.firstLastname}]]
+                                [[${item.user.secondLastname}]]</b>
+                        </div>
+                        <div class="col-12 col-sm-2">
+                            <b>[[${#dates.format(item.createdAt, 'dd-MM-yyyy')}]]</b>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="col-1 hide-col">
+
+                </div>
+            </div>
+            <!-- end of item -->
+            <div class="row mt-5 text-center">
+                <div class="col-12">
+                    <a th:href="@{/blog/find_update/{id}/true (id=${item.id})}" class="btn btn-blue text-white"><i class="bi bi-pencil-square"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"><b>Actualizar</b></span></a>
+                </div>
             </div>
         </div>
-    </div>
-    <div th:replace="~{fragments/footerBlog :: footer}">
-    </div>
+        <div th:replace="~{fragments/footerBlog :: footer}">
+        </div>
+        </div>
+    </section>
+    <!-- end of design -->
+</div>
+
 </body>
 </html>
