--- a/src/main/resources/templates/views/blog/blogFormUpdate.html
+++ b/src/main/resources/templates/views/blog/blogFormUpdate.html
@@ -13,7 +13,7 @@
                 <li class="breadcrumb-item" aria-current="page">ADOPTAME</li>
                 <li class="breadcrumb-item" aria-current="page">NOTICIAS</li>
                 <li class="breadcrumb-item" aria-current="page" ><a class="text-decoration-none" th:href="@{/blog}">BLOG</a></li>
-                <li class="breadcrumb-item active text-danger" aria-current="page">ACTUALIZAR</li>
+                <li class="breadcrumb-item active text-primary" aria-current="page"><b>ACTUALIZAR</b></li>
             </ol>
         </nav>
     </div>
@@ -25,84 +25,95 @@
         <div th:insert="~{fragments/alert :: alerts}">
         </div>
 
-       <form th:action="@{/blog/update}" method="post" th:object="${blog}" enctype="multipart/form-data">
-           <input type="hidden" th:field="*{id}" />
-           <input type="hidden" th:if="${blog.image != null}" th:field="*{image}" />
+        <form th:action="@{/blog/update}" method="post" th:object="${blog}" enctype="multipart/form-data">
+            <input type="hidden" th:field="*{id}" />
+            <input type="hidden" th:if="${blog.image != null}" th:field="*{image}" />
 
             <div class="card-body">
                 <div class="row">
                     <div class="col-12">
-                        <h5 class="card-title">ACTUALIZAR BLOG</h5>
+                        <h5 class="card-title"><b>ㅤACTUALIZAR BLOG</b></h5>
                     </div>
                     <hr class="mt-2"/>
                 </div>
-                <div class="row">
 
-                    <div class="col-12 mt-2">
-                        <label for="title" class="form-label">Titulo del Blog</label>
-                        <input type="text" class="form-control" name="title" id="title" th:value="${blog.title}" placeholder="Titulo del Blog">
-                        <div class="form-text text-danger" th:if="${errors != null && errors.get('title') != null}">
+                <div class="container">
+                    <div class="container">
+                        <div class="row mt-3">
+                            <div class="col-12 col-sm-5">
+                                <div class="col-12">
+                                    <label for="title" class="form-label"><b>Titulo del Blog</b></label>
+                                    <input type="text" class="form-control" name="title" id="title" th:value="${blog.title}" placeholder="Titulo del Blog">
+                                    <div class="form-text text-danger" th:if="${errors != null && errors.get('title') != null}">
                             <span th:each="error: ${errors.get('title')}">
                                 [[${error}]]
                                 <br>
                             </span>
-                        </div>
-                    </div>
+                                    </div>
+                                </div>
 
-                    <div class="col-12 mt-2">
-                        <div class="col-lg-12">
-                            <label class="form-label">¿Es principal?</label>
-                        </div>
+                                <div class="col-12">
+                                    <div class="col-12 mt-3">
+                                        <label class="form-label"><b>¿Es principal?</b></label>
+                                    </div>
 
-                        <div class="col-lg-12 mt-2">
-                            <input class="form-check-input" type="radio" name="principal" id="isPrincipal1" th:field="*{principal}" th:value="true"  />
-                            <label class="form-check-label me-2 " for="isPrincipal1">Si</label>
+                                    <div class="col-12">
+                                        <input class="form-check-input" type="radio" name="principal" id="isPrincipal1" th:field="*{principal}" th:value="true"  />
+                                        <label class="form-check-label me-2 " for="isPrincipal1">Si</label>
 
-                            <input class="form-check-input" type="radio" name="principal" id="isPrincipal2"  th:field="*{principal}"  th:value="false" />
-                            <label class="form-check-label" for="isPrincipal2">No</label>
+                                        <input class="form-check-input" type="radio" name="principal" id="isPrincipal2"  th:field="*{principal}"  th:value="false" />
+                                        <label class="form-check-label" for="isPrincipal2">No</label>
 
-                        </div>
-                         <div class="form-text text-danger" th:if="${errors != null && errors.get('isPrincipal') != null}">
+                                    </div>
+                                    <div class="form-text text-danger" th:if="${errors != null && errors.get('isPrincipal') != null}">
                              <span th:each="error: ${errors.get('isPrincipal')}">
                                  [[${error}]]
                                  <br>
                              </span>
-                        </div>
-                    </div>
-                    <div class="col-6 mt-2">
-                        <label for="imageF" class="form-label">Imagen</label>
-                        <input type="file" class="form-control" name="imageF" id="imageF" accept="image/png, image/jpeg, image/jpg, image/gif, image/svg"/>
-                        <div class="form-text text-danger" th:if="${fileError != null}" >[[${fileError}]]</div>
-                    </div>
-                    <div class="col-6 mt-2" >
-                        <label class="form-label">&nbsp;</label>
-                        <br>
-                        <img class="img-info" th:src="@{/uploads/{image} (image=${blog.image})}" alt="No Tiene imagen"  height="100px" width="100px"/>
-                    </div>
-                    <div class="col-12 mt-2">
-                        <label for="content" class="form-label">Contenido</label>
-                        <textarea id="content" name="content" th:value="${blog.content}"  th:utext="${blog.content}"></textarea>
-                        <div class="form-text text-danger" th:if="${errors != null && errors.get('content') != null}">
+                                    </div>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label for="imageF" class="form-label"><b>Imagen</b></label>
+                                    <input type="file" class="form-control" name="imageF" id="imageF" accept="image/png, image/jpeg, image/jpg, image/gif, image/svg"/>
+                                    <div class="form-text text-danger" th:if="${fileError != null}" >[[${fileError}]]</div>
+                                </div>
+
+                            </div>
+                            <div class="col-sm-1">
+                                ㅤ
+                            </div>
+
+                            <div class="col-12 col-sm-6">
+                                <img class="img-info" th:src="@{/uploads/{image} (image=${blog.image})}" alt="No Tiene imagen"  height="225px" width="90%"/>
+                            </div>
+
+
+                            <div class="col-12 mt-3">
+                                <label for="content" class="form-label"><b>Conetnido</b></label>
+                                <textarea id="content" name="content" th:value="${blog.content}"  th:utext="${blog.content}"></textarea>
+                                <div class="form-text text-danger" th:if="${errors != null && errors.get('content') != null}">
                                     <span th:each="error: ${errors.get('content')}">
                                         [[${error}]]
                                         <br>
                                     </span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-   
             </div>
-            <div class="card-footer">
-                <div class="row mt-2">
-                    <div class="col-lg-12 text-end">
-                         <a th:href="@{/blog}" class="btn btn-secondary"><i class="bi bi-x-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> Cancelar</span></a>
-                        <button type="submit" class="btn btn-primary"><i class="bi bi-check-lg"></i><span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> Actualizar</span> </button>
-                    </div>
-                </div>
-            </div>
-        </form>
     </div>
+
+    <div class="card-footer">
+        <div class="row mt-2">
+            <div class="col-lg-12 text-end">
+                <a th:href="@{/blog}" class="btn btn-secondary"><i class="bi bi-x-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> <b>Cancelar</b></span></a>
+                <button type="submit" class="btn btn-blue text-white"><i class="bi bi-check-lg"></i><span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> <b>Actualizar</b></span> </button>
+            </div>
+        </div>
+    </div>
+    </form>
+</div>
 </div>
 <div th:replace="~{fragments/footerBlog :: footer}">
 </div>
