--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -8,12 +8,12 @@ body {
 .carousel,
 .item,
 .active {
-  
+
     height: 100%;
 }
 
 .carousel-inner {
-  height: 100%;
+    height: 100%;
     width: 100%;
 }
 
@@ -36,62 +36,36 @@ p{padding:10px}
 
 
 #imgSlider{
-  background-color:rgb(134, 128, 128);
-  width: 100%;
-  height:1500px !important;
+    background-color:rgb(134, 128, 128);
+    width: 100%;
+    height:1500px !important;
 }
 
 /**
  * Button
  */
 .btn-transparent {
-  background: transparent;
-  color: #fff;
-  border: 2px solid #fff;
+    background: transparent;
+    color: #fff;
+    border: 2px solid #fff;
 }
 
 .btn-transparent:hover {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 .btn-rounded {
-  border-radius: 70px;
+    border-radius: 70px;
 }
 
 .btn-large {
-  padding: 11px 45px;
-  font-size: 18px;
+    padding: 11px 45px;
+    font-size: 18px;
 }
 
 .animated {
-  -webkit-animation-duration: 2.5s;
-  animation-duration: 2.5s;
-}
-.carousel-caption{
-    margin-bottom: -1.2%;
-    position: absolute !important;
-    width: 100% !important;
-    margin-left: -15%;
-}
-
-@media only screen and (min-width: 600px) {
-    .btn-coursel{
-        text-transform: uppercase;
-        color: white;
-        font-size: 3rem !important;
-        font-family: Quicksand;
-        text-shadow: 1px  0px 0px black, 0px  1px 0px black, -1px  0px 0px black, 0px -1px 0px black;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .btn-coursel{
-        text-transform: uppercase;
-        color: white;
-        font-size: 1.5rem !important;
-        font-family: Quicksand;
-        text-shadow: 1px  0px 0px black, 0px  1px 0px black, -1px  0px 0px black, 0px -1px 0px black;
-    }
+    -webkit-animation-duration: 2.5s;
+    animation-duration: 2.5s;
 }
 
 .sp-text{
@@ -99,6 +73,14 @@ p{padding:10px}
     font-family: Quicksand;
     display: flex;
     justify-content: center;
+}
+
+.banner-text{
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    margin: 4%;
 }
 
 .sp-text-div{
@@ -111,60 +93,133 @@ p{padding:10px}
     text-shadow: 1px  0px 0px black, 0px  1px 0px black, -1px  0px 0px black, 0px -1px 0px black;
 }
 
-.coursel-text{
-    background-color: rgba(0, 0, 0, 0.7);
-    height:180px;
-    box-shadow: 0 0 20px rgb(0, 0, 0);
-}
-
 .hg-blog{
-    width:100%;
-    height:auto;
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
 
+.parent{
+    display: flex;
+}
 
 @-webkit-keyframes fadeInRight {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(100px, 0, 0);
-    transform: translate3d(100px, 0, 0);
-  }
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(100px, 0, 0);
+        transform: translate3d(100px, 0, 0);
+    }
 
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
 }
 
 @keyframes fadeInRight {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(100px, 0, 0);
-    transform: translate3d(100px, 0, 0);
-  }
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(100px, 0, 0);
+        transform: translate3d(100px, 0, 0);
+    }
 
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
 }
 
 .fadeInRight {
-  -webkit-animation-name: fadeInRight;
-  animation-name: fadeInRight;
+    -webkit-animation-name: fadeInRight;
+    animation-name: fadeInRight;
 }
 
-@media only screen and (max-width: 600px) {
+.btn-coursel{
+    text-transform: uppercase;
+    color: white;
+    font-family: Quicksand;
+    text-shadow: 1px  0px 0px black, 0px  1px 0px black, -1px  0px 0px black, 0px -1px 0px black;
+}
+.coursel-text{
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 20px rgb(0, 0, 0);
+}
+
+.back-links{
+    background-color: #3acbc6
+}
+
+@media only screen and (max-width: 480px) {
     .img-height {
         height: 250px;
-
+    }
+    .btn-coursel{
+        font-size: 0.9rem !important;
+    }
+    .coursel-text{
+        height:80px;
     }
 }
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
     .img-height {
-        height: 787px;
+        height: 250px;
+    }
+    .btn-coursel{
+        font-size: 1rem !important;
+    }
+    .coursel-text{
+        height:90px;
     }
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1279px) {
+    .img-height {
+        height: 530px;
+    }
+    .btn-coursel{
+        font-size: 1.5rem !important;
+    }
+    .coursel-text{
+        height:120px;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .img-height {
+        height: 720px;
+    }
+    .btn-coursel{
+        font-size: 1.8rem !important;
+        margin-top: 20px;
+    }
+    .coursel-text{
+        height:150px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .img-height {
+        height: 1020px;
+    }
+    .btn-coursel{
+        font-size: 3rem !important;
+        margin-top: 20px;
+    }
+    .coursel-text{
+        height:200px;
+    }
+}
+
+.card {
+    border: none;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-footer{
+    background: none;
+    border-top: none;
+}
