--- a/src/main/resources/templates/views/pet/listTablePets.html
+++ b/src/main/resources/templates/views/pet/listTablePets.html
@@ -9,73 +9,88 @@
     <div th:replace="~{fragments/navigation :: navigation}">
     </div>
 
-    <div class="container mt-3">
-        <div class="row">
-            <h2 class="col-6">Mascotas</h2>
-            <div class="col-6 d-flex py-1 justify-content-end" sec:authorize="hasRole('ROLE_VOLUNTARIO')">
-                <a class="btn btnAdd" th:href="@{/pets/create}"><strong><i class="bi bi-plus-lg"></i></strong></a>
+    <div class="container">
+
+        <div class="card mt-5">
+            <div class="card-body">
+                <div class="row">
+                    <div class="row">
+                        <div class="col-11">
+                            <h5 class="card-title"><b>ㅤMASCOTAS</b></h5>
+                        </div>
+                        <div class="col-1 d-flex py-1 justify-content-end" sec:authorize="hasRole('ROLE_VOLUNTARIO')">
+                            <a class="btn btn-info btn-circle" th:href="@{/pets/create}"><strong><i class="bi bi-plus-lg"></i></strong></a>
+                        </div>
+                        <hr class="col-12 mt-2"/>
+                    </div>
+
+                </div>
+
+                <div class="table-responsive">
+                    <div th:insert="~{fragments/alert :: alerts}">
+                    </div>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th class="text-center" scope="col">#</th>
+                            <th class="text-center" scope="col">Foto</th>
+                            <th class="text-center" scope="col">Nombre</th>
+                            <th class="text-center" scope="col">Edad</th>
+                            <th class="text-center" scope="col">Sexo</th>
+                            <th class="text-center" scope="col">Adopción</th>
+                            <th class="text-center" scope="col">Fecha</th>
+                            <th class="text-center" scope="col">Estado</th>
+                            <th class="text-center" scope="col">Acciones</th>
+                        </tr>
+                        </thead>
+                        <tbody th:each="item, iter : ${listPets}" style="margin-bottom: 5px" >
+                        <tr class="bg-blue" style="vertical-align:middle;">
+                            <th class="pt-3 text-center" scope="row">[[${index + (iter.index + 1)}]]</th>
+                            <td class="pt-3 d-flex justify-content-center align-items-center">
+                                <img class="image-fluid" th:src="@{/uploads/{img}(img=${item.image})}" th:alt="${item.name}" style="max-height: 80px;" />
+                            </td>
+                            <td class=" text-center">[[${item.name}]]</td>
+                            <td class=" text-center">[[${item.age}]]</td>
+                            <td class=" text-center">[[${item.sex}]]</td>
+                            <td class=" text-center" th:text="${item.availableAdoption == true ? 'Disponible' : 'No disponible'}"></td>
+                            <td class=" text-center">
+                                [[${#dates.format(item.createdAt, 'dd-MMM-yyyy')}]]
+                            </td>
+                            <td class="text-center">
+                                <div th:switch="${item.isAccepted}">
+                                    <div th:if="${item.isAccepted == 'aceptado'}">
+                                        <p class="text-muted text-center">
+                                            <span class="badge btn-blue">Aceptado</span>
+                                        </p>
+                                    </div>
+                                    <div th:case="'pendiente'">
+                                        <p class="text-muted text-center">
+                                            <span class="badge bg-warning">Pendiente</span>
+                                        </p>
+                                    </div>
+                                    <div th:case="'rechazado'">
+                                        <p class="text-muted text-center">
+                                            <span class="badge bg-danger">Rechazado</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="text-center">
+                                <a sec:authorize="hasRole('ROLE_VOLUNTARIO')" class="btn btn-blue my-1" th:href="@{/pets/find_update/{id}(id=${item.id})}"><i class="bi bi-pencil-square"></i></a>
+                                <a class="btn btn-blueC my-1" th:href="@{/pets/detail-admin/{id}(id=${item.id})}"><i class="bi bi-eye"></i></a>
+                            </td>
+                        </tr>
+                        <tr id="spacing-row">
+                            <td></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div th:insert="~{fragments/paginator :: paginator}">
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="table-responsive-sm table-responsive-md mt-2">
-            <div th:insert="~{fragments/alert :: alerts}">
-            </div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th class="text-center" scope="col">#</th>
-                        <th class="text-center" scope="col"></th>
-                        <th class="text-center" scope="col">Nombre</th>
-                        <th class="text-center" scope="col">Edad</th>
-                        <th class="text-center" scope="col">Sexo</th>
-                        <th class="text-center" scope="col">Se puede adoptar</th>
-                        <th class="text-center" scope="col">Fecha de publicación</th>
-                        <th class="text-center" scope="col">Estado publicación</th>
-                        <th class="text-center" scope="col">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="item, iter : ${listPets}">
-                        <th class="text-center" scope="row">[[${index + (iter.index + 1)}]]</th>
-                        <td class="d-flex justify-content-center align-items-center">
-                            <img class="image-fluid" th:src="@{/uploads/{img}(img=${item.image})}" th:alt="${item.name}" style="max-height: 80px;" />
-                        </td>
-                        <td class="text-center">[[${item.name}]]</td>
-                        <td class="text-center">[[${item.age}]]</td>
-                        <td class="text-capitalize text-center">[[${item.sex}]]</td>
-                        <td class="text-center" th:text="${item.availableAdoption == true ? 'Disponible' : 'No disponible'}"></td>
-                        <td class="text-center">
-                            [[${#dates.format(item.createdAt, 'dd-MMM-yyyy')}]]
-                        </td>
-                        <td>
-                            <div th:switch="${item.isAccepted}">
-                                <div th:if="${item.isAccepted == 'aceptado'}">
-                                    <p class="text-muted text-center">
-                                        <span class="badge bg-success">Aceptado</span>
-                                    </p>
-                                </div>
-                                <div th:case="'pendiente'">
-                                    <p class="text-muted text-center">
-                                        <span class="badge bg-warning">Pendiente</span>
-                                    </p>
-                                </div>
-                                <div th:case="'rechazado'">
-                                    <p class="text-muted text-center">
-                                        <span class="badge bg-danger">Rechazado</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="">
-                            <a sec:authorize="hasRole('ROLE_VOLUNTARIO')" class="btn btn-warning my-1" th:href="@{/pets/find_update/{id}(id=${item.id})}"><i class="bi bi-pencil-square"></i></a> &nbsp;
-                            <a class="btn btn-info my-1" th:href="@{/pets/detail-admin/{id}(id=${item.id})}"><i class="bi bi-eye"></i></a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <div th:insert="~{fragments/paginator :: paginator}">
-            </div>
-        </div>
     </div>
 
     <div th:replace="~{fragments/footer :: footer}">
