--- a/src/main/resources/templates/fragments/formTracingPet.html
+++ b/src/main/resources/templates/fragments/formTracingPet.html
@@ -3,33 +3,44 @@
 
 <body>
     <div th:fragment="petTracingForm" th:if="${petTracing != null}">
-        <h5>Aceptación del seguimiento de la mascota</h5>
-        <form th:object="${petTracing}" th:action="@{/pets/change}" method="post">
-            <div class="col-12 col-sm-6">
-                <input th:field="*{id}" type="hidden">
 
-                <label class="form-label">Estado de aceptación del registro</label>
-                <div class="form-check" th:each="item : ${tracingOptions}">
-                    <input th:field="*{isAccepted}" th:value="${item}" class="form-check-input" type="radio" name="accepted">
-                    <label class="form-check-label text-capitalize">
-                        [[${item}]]
-                    </label>
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-12">
+                            <h5 class="card-title text-center"><b>ACEPTACIÓN DEL SEGUIMIENTO DE LA MASCOTA</b></h5>
+                    </div>
+                    <hr class="col-12 mt-3"/>
                 </div>
-                <div class="form-text text-danger" th:if="${errors != null && errors.get('isAccepted') != null}">
+                <form th:object="${petTracing}" th:action="@{/pets/change}" method="post">
+                    <div class="col-12 col-sm-6">
+                        <input th:field="*{id}" type="hidden">
+
+                        <label class="form-label">Estado de aceptación del registro</label>
+                        <div class="form-check" th:each="item : ${tracingOptions}">
+                            <input th:field="*{isAccepted}" th:value="${item}" class="form-check-input" type="radio" name="accepted">
+                            <label class="form-check-label text-capitalize">
+                                [[${item}]]
+                            </label>
+                        </div>
+                        <div class="form-text text-danger" th:if="${errors != null && errors.get('isAccepted') != null}">
                     <span th:each="error: ${errors.get('isAccepted')}">
                         [[${error}]]
                         <br>
                     </span>
-                </div>
+                        </div>
+                    </div>
+                    <div class="col-12 px-5 mt-3">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-blue">
+                                <b class="text-white">Cambiar estado de aceptación</b>
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="col-12 px-5 mt-3">
-                <div class="d-grid gap-2">
-                    <button class="btn btn-primary">
-                        Cambiar estado de aceptación
-                    </button>
-                </div>
-            </div>
-        </form>
+        </div>
+
     </div>
 </body>
 
