Eliminación de botones grises

--- a/src/main/resources/templates/views/blog/blogFormUpdate.html
+++ b/src/main/resources/templates/views/blog/blogFormUpdate.html
@@ -107,7 +107,7 @@
     <div class="card-footer">
         <div class="row mt-2">
             <div class="col-lg-12 text-end">
-                <a th:href="@{/blog}" class="btn btn-secondary"><i class="bi bi-x-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> <b>Cancelar</b></span></a>
+                <a th:href="@{/blog}" class="btn btn-blueC"><i class="bi bi-x-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> <b>Cancelar</b></span></a>
                 <button type="submit" class="btn btn-blue text-white"><i class="bi bi-check-lg"></i><span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> <b>Actualizar</b></span> </button>
             </div>
         </div>
