Eliminación de botones grises

--- a/src/main/resources/templates/views/pet/addPet.html
+++ b/src/main/resources/templates/views/pet/addPet.html
@@ -133,7 +133,7 @@
                     </div>
                     <hr class="mt-4">
                     <div class="col-12 text-end">
-                        <a th:href="@{/pets/management_list}" class="btn btn-secondary"><i class="bi bi-x-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"><b>Cancelar</b></span></a>
+                        <a th:href="@{/pets/management_list}" class="btn btn-blueC"><i class="bi bi-x-lg"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"><b>Cancelar</b></span></a>
                         <button type="submit" class="btn btn-blue text-white"><i class="bi bi-check-lg"></i><span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"><b>Registrar</b></span></button>
                     </div>
                 </form>
