--- a/src/main/resources/templates/fragments/infoPet.html
+++ b/src/main/resources/templates/fragments/infoPet.html
@@ -15,52 +15,52 @@
           <hr class="col-12 mt-3 mb-1"/>
         </div>
 
-        <div class="row">
+        <div class="row text-center">
           <div th:object="${pet}" class="row mt-3 px-5">
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
               <p class="fw-bold">Nombre</p>
               <p>
                 [[*{name}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
               <p class="fw-bold">Edad</p>
               <p>
                 [[*{age}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
-              <p class="fw-bold">Tipo de mascota</p>
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
+              <p class="fw-bold">Tipo</p>
               <p class="text-capitalize">
                 [[*{type}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
-              <p class="fw-bold">Sexo de la mascota</p>
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
+              <p class="fw-bold">Sexo</p>
               <p class="text-capitalize">
                 [[*{sex}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
               <p class="fw-bold">Color</p>
               <p>
                 [[*{color.name}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
               <p class="fw-bold">Tamaño</p>
               <p>
                 [[*{size.name}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
               <p class="fw-bold">Carácter</p>
               <p>
                 [[*{personality.name}]]
               </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 mb-1">
-              <p class="fw-bold">Disponible para adopción</p>
+            <div class="col-12 col-sm-6 col-md-4 mb-2">
+              <p class="fw-bold">Adopción</p>
               <p>
                 [[${pet.availableAdoption ? 'Disponible' : 'No disponible'}]]
               </p>
@@ -70,11 +70,6 @@
               <p class="text-capitalize">
                 [[*{isAccepted}]]
               </p>
-            </div>
-            <div class="col-12 mb-2" sec:authorize="isAuthenticated() && hasRole('ROLE_ADOPTADOR')">
-              <div th:insert="~{fragments/formAdopt :: formAdopt}">
-
-              </div>
             </div>
           </div>
         </div>
