--- a/src/main/resources/templates/fragments/formTracingAdoptionApplication.html
+++ b/src/main/resources/templates/fragments/formTracingAdoptionApplication.html
@@ -3,37 +3,44 @@
 
 <body>
 <div th:fragment="petAdoptionForm" th:if="${adoptionForm != null}">
-    <h5>Estado solicitud de la mascota</h5>
-    <form th:object="${adoptionForm}" th:action="@{/adoptions/response_application}" method="post">
-        <div class="col-12 col-sm-6">
-            <input th:field="*{id}" type="hidden">
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-12">
+                    <h5 class="card-title"><b>ㅤESTADO SOLICITUD DE LA MASCOTA</b></h5>
+                </div>
+                <hr class="col-12 mt-3"/>
+            </div>
+            <form th:object="${adoptionForm}" th:action="@{/adoptions/response_application}" method="post">
+                <div class="col-12 col-sm-6">
+                    <input th:field="*{id}" type="hidden">
 
-            <label class="form-label">Estado de solicitud</label>
-            <div class="form-check" th:each="item : ${listStatesAdoption}">
+                    <label class="form-label"><b>Estado de solicitud</b></label>
+                    <div class="form-check" th:each="item : ${listStatesAdoption}">
 
-                <input th:field="*{state}" th:value="${item}" class="form-check-input" type="radio" name="accepted">
-                <label class="form-check-label text-capitalize">
-                    [[${item}]]
-                </label>
-            </div>
-            <div class="form-text text-danger" th:if="${errors != null && errors.get('state') != null}">
-                    <span th:each="error: ${errors.get('state')}">
-                        [[${error}]]
-                        <br>
-                    </span>
-            </div>
-            <div class="form-text text-danger" th:if="${errorMessage != null}">
-                   [[${errorMessage}]]
-            </div>
+                        <input th:field="*{state}" th:value="${item}" class="form-check-input" type="radio" name="accepted">
+                        <label class="form-check-label text-capitalize">
+                            [[${item}]]
+                        </label>
+                    </div>
+                    <div class="form-text text-danger" th:if="${errors != null && errors.get('state') != null}">
+                        <span th:each="error: ${errors.get('state')}">
+                            [[${error}]]
+                            <br>
+                        </span>
+                    </div>
+                    <div class="form-text text-danger" th:if="${errorMessage != null}">
+                        [[${errorMessage}]]
+                    </div>
+                </div>
+                <div class="d-grid gap-2 mt-3">
+                    <button class="btn btn-blue text-white">
+                        <b>Cambiar estado de solicitud</b>
+                    </button>
+                </div>
+            </form>
         </div>
-        <div class="col-12 px-5 mt-3">
-            <div class="d-grid gap-2">
-                <button class="btn btn-primary">
-                    Cambiar estado de solicitud
-                </button>
-            </div>
-        </div>
-    </form>
+    </div>
 </div>
 </body>
 
